index.css
/* ... */
.snow {
    --background-color: linear-gradient(180deg, rgba(2, 0, 36, 1) 40%, rgba(9, 9, 121, 1) 100%);
    --fallback-background-color: rgb(2, 0, 36);

    --standard-block-color: rgba(0, 0, 0, 0);

    --dialog-background-color: #070069;
}

.high-contrast {
    --correct-color: var(--orange);
    --within-color: var(--blue);
    --letter-selected-inverted-text-color: var(--black);

    --focused-card-border-color: var(--within-color);
}

/* Main Content */

html {
    font-size: 125%;
    font-family: sans-serif;
}

body {
    background: var(--fallback-background-color);
    margin: 0;
    overflow: hidden;
}

body > div.game-background {
    background: var(--fallback-background-color);
    background: var(--background-color);
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -100;
}

svg {
    color: var(--text-color);
}

.top-menu {
    position: relative;
    background-color: var(--item-background-color);
    border-bottom: 1px solid var(--standard-color);
    padding: 1rem;
    font-size: 1rem;
    font-family: sans-serif;
    text-transform: uppercase;
    color: var(--text-color);
    display: flex;
    justify-content: space-between;
    height: 64px;
    box-sizing: border-box;
}

.top-menu > .icon-bar {
    position: absolute;
    right: 20px;
}

.top-menu > .icon-bar > a.link-icon {
    text-decoration: none;
    margin-right: 4px;
}

.top-menu > .icon-bar > a.link-icon:last-child {
    margin-right: 0;
}

.wordle-rows {
    width: 100%;
    height: 60%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.keyboard-view {
    display: flex;
    align-items: center;
    width: 100%;
    display: flex;
    justify-content: center;
    height: max-content;
}

.game-wrapper {
    position: relative;
    left: 50%;
    width: 50vw;
    height: 100%;
    transform: translateX(-50%);
}

.input-row {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 75%;
    height: 16.67%;
    max-height: 3rem;
}

.pane > .space {
    flex: 1;
}

.pane .pane-overlay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

@media (max-width: 1028px) {
    .game-wrapper {
        width: 100%;
    }
}

.pane {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;
    height: calc(100% - 64px);
    width: 100%;
    transform-origin: top;
}

.pane h1,
h2,
h3,
h4,
h5 {
    color: var(--text-color);
}

.pane > .footer {
    color: var(--text-color);
    text-align: center;
}

button {
    border: none;
    cursor: pointer;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

button.close {
    z-index: 1;
    width: 2.5rem;
    height: 2.5rem;
    background-color: rgba(0, 0, 0, 0);
    color: var(--text-color);
}

button.button {
    padding: 0.5em 0.5em 0.5em 0.5em;
    margin: 0.5em 0em 0.5em 0em;
    border-radius: 8em;
    background-color: var(--correct-color);
}

button.button > * {
    color: var(--letter-selected-inverted-text-color);
    font-weight: bold;
}

/* Settings */

.settings {
    position: relative;
}

.settings > button.close {
    position: absolute;
    top: 0;
    right: 0;
}

.settings > .settings-item-group {
    width: 100%;
}

.settings .settings-item {
    color: var(--text-color);
    display: flex;
    width: 100%;
    justify-content: space-around;
    align-items: center;
    border-top: var(--settings-item-border-color);
    border-bottom: none;
    height: 2em;
}

.settings .settings-item:last-child {
    border-bottom: var(--settings-item-border-color);
}

.settings .settings-item > * {
    pointer-events: none;
}

.settings .settings-item a {
    text-decoration: none;
}

.settings .settings-item .settings-item-column {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: baseline;
    gap: 0.5em;
}

.settings .settings-item .settings-item-column:last-child {
    width: 60%;
}

.settings .settings-item .settings-item-column > .toggle {
    text-transform: capitalize;
}

/* Overlay Backdrop */

.overlay-back {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: none;
    z-index: 100;
}

/* Dialog Window */

.dialog {
    position: fixed;
    top: 50%;
    left: 50%;
    right: 0;
    bottom: 0;
    z-index: 101;
    transform: translate(-50%, -50%);

    background-color: var(--dialog-background-color);
    color: var(--text-color);
    border: 1px solid black;
    width: 300px;
    max-height: 90vh;
    height: auto;
    margin: 0;
    padding: 0;

    display: flex;
    flex-direction: column;

    opacity: 1;

    transition:
        top 0.5s,
        opacity 0.5s;
}

@media (max-width: 320px) {
    .dialog {
        width: 250px;
    }
}

.dialog > div.dialog-content {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 100%;
    padding: 0 2rem;
    box-sizing: border-box;
    overflow-y: auto;
    flex: 1;
    min-height: 0;
}

.dialog > div.dialog-content > div.dialog-text {
    height: 100%;
    position: relative;
}

.dialog > div.dialog-content > div.dialog-text > ul > li {
    margin-bottom: 8px;
}

.dialog > div.dialog-content > div.dialog-text > ul > li:last-child {
    margin-bottom: 0;
}

.dialog > div.dialog-content > div.dialog-text > *:last-child {
    padding: 0 0 16px 0;
}

.dialog > div.dialog-content > span {
    margin: 8px 0;
}

.dialog > div.dialog-content > .next-wordle {
    margin: 8px 0;
}

.dialog button > span {
    margin-left: 8px;
}

.dialog button.close {
    position: absolute;
    top: 0;
    right: 0;
}

/* Specific Dialogs */

.dialog > .dialog-content > .how-to-play {
    height: 100%;
    position: relative;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content {
    padding: 0 0 8px 0;
}
/* ... */

